<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_botones">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/tvText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="Ordenar por" />

                <View
                    android:layout_width="137dp"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_toLeftOf="@id/tvText"
                    android:background="#FF0000" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:layout_toRightOf="@id/tvText"
                    android:background="#FF0000" />

            </RelativeLayout>

            <RadioGroup
                android:layout_width="366dp"
                android:layout_height="117dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="31dp">

                <RadioButton
                    android:id="@+id/rbConfiguracionesDialogoCodigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/rbConfiguracionesDialogoCodigo"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp" />

                <RadioButton
                    android:id="@+id/rbConfiguracionesDialogoNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rbConfiguracionesDialogoNombre" />

                <RadioButton
                    android:id="@+id/rbConfiguracionesDialogoFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rbConfiguracionesDialogoFecha" />

            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="157dp">

                <TextView
                    android:id="@+id/tvText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="Orden" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_toLeftOf="@id/tvText2"
                    android:background="#FF0000" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:layout_toRightOf="@id/tvText2"
                    android:background="#FF0000" />

            </RelativeLayout>

            <RadioGroup
                android:layout_width="366dp"
                android:layout_height="117dp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="184dp">

                <RadioButton
                    android:id="@+id/rbConfiguracionesDialogoAsc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/rbConfiguracionesDialogoAsc"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp" />

                <RadioButton
                    android:id="@+id/rbConfiguracionesDialogoDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rbConfiguracionesDialogoDesc" />

            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="312dp">

                <Button
                    android:id="@+id/btnConfiguracionesDialogoCancelar"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_botones"
                    android:text="@string/btnCancelar" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnConfiguracionesDialogoAceptar"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_botones"
                    android:text="@string/btnAceptar" />
            </LinearLayout>


        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>