<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:gravity="top|center_horizontal"
        app:elevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                app:contentInsetLeft="0dp"
                app:contentInsetStartWithNavigation="0dp">

            </android.support.v7.widget.Toolbar>

            <ImageView
                android:id="@+id/toolbar_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/logo_bj" />
            <!--
                android:src="@drawable/logo_coti" />
                android:background="@drawable/logo_manolito"
                android:background="@drawable/logo_kiwitech"
                -->
        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="top|bottom|center_vertical|center_horizontal"
        android:layout_marginBottom="8dp"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/colorAccent"
        android:visibility="gone" />

    <!--android:layout_below="@id/login_progress" -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/usuario_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtUsuarioU"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="invisible" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edtContrasenia"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <!--
            <CheckBox
                android:id="@+id/cbRecordarUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cbRecordarUsuario" />
            -->

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/btnIngresar"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/layout_botones"
                    android:text="@string/btnIngresar"
                    android:textStyle="bold" />

                <Space
                    android:id="@+id/spLoginBotones"
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_below="@id/btnIngresar" />

                <Button
                    android:id="@+id/btnLoginImportarInfo"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spLoginBotones"
                    android:layout_alignParentBottom="false"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/layout_botones"
                    android:text="@string/btnImportarInfo"
                    android:textStyle="bold" />


            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>